[package]
name = "singularity-emu"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.14.0"
byteorder = "1.5.0"
cpal = "0.15.2"
fundsp = "0.15.0"
ggez = "0.9.3"
rand = "0.8.5"
lazy_static = "1.4"
typenum = "1.17.0"